public/_new-layout-eventweekly/css/style.css
/* ... */
#header .filters .filters-form__button {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  -webkit-box-shadow: 2px 2px 0px #424242;
  -moz-box-shadow: 2px 2px 0px #424242;
  box-shadow: 2px 2px 0px #424242;
  display: inline-block;
  position: relative;
  padding: 10px 15px;
  background: #CC7718;
  color: #fff;
  cursor: pointer;
  font-family: "Open Sans";
  font-size: 15px;
  text-decoration: none;
}
#header .filters .filters-form__button:active {
  top: 1px;
}
@media only screen and (max-width: 695px) {
  #header .filters .filters-form__button {
    width: 100%;
  }
}
#header .filters .filters-form__divider {
  display: inline-block;
  width: 1px;
  height: 35px;
  margin: 0 15px 0 10px;
  text-align: center;
  vertical-align: top;
  background: #7D7D7D;
}
@media only screen and (max-width: 1023px) {
  #header .filters .filters-form__divider {
    display: block;
    width: 100%;
    height: 1px;
    margin: 7px 0 14px 0;
    background: #555;
  }
}
#header .user-bar {
  position: absolute;
  
  right: 2.3%;
  top: 11px;
  font-family: "Open Sans";
  font-size: 15px;
  color: #F7931E;
  vertical-align: middle;
}
/*
**********************
* =header new fix long username bug
**********************
*/
@media only screen and (max-width: 965px) {
    #header .user-bar {
    position: relative;
  }
}



#header .user-bar a {
  display: block;
  cursor: pointer;
  text-decoration: none;
}
#header .user-bar__avatar {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  display: inline-block;
  width: 34px;
  height: 34px;
  margin-right: 10px;
  overflow: hidden;
}
#header .user-bar .caret {
  margin-left: 10px;
}
@media only screen and (max-width: 695px) {
  #header .user-bar .dropdown {
    display: inline-block;
  }
}
@media only screen and (max-width: 695px) {
  #header .user-bar {
    position: relative;
    right: auto;
    top: auto;
    float: right;
  }
}

#footer {
  position: relative;
  width: 100%;
  padding: 20px 0;
  background: #1A1A1A;
  border-top: 2px solid #A86514;
  z-index: 101;
  clear: both;
}
/*new footer*/
#footer .footer_item{
  width: 50%;
  float: left;
  padding-left: 15px;
  font-size: 18px;
}
#footer .footer_item_left{
  text-align: right;
  padding-right: 15px;
}
/*new footer*/

#footer .widgets {
  margin-left: -1.6%;
}
#footer .widgets:before, #footer .widgets:after {
  content: "";
  display: table;
}
#footer .widgets:after {
  clear: both;
}
#footer .widgets .widget {
  float: left;
  padding: 0 0 0 1.6%;
}
#footer .widgets .widget__title {
  color: #F7931E;
  font-family: "Open Sans";
  font-size: 20px;
  font-weight: 300;
  margin-bottom: 25px;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget__title {
    font-size: 22px;
  }
}
#footer .widgets .widget__text {
  font-family: "Open Sans";
  font-weight: 300;
  font-size: 14px;
  color: #B3B3B3;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget__text {
    font-size: 16px;
  }
}
#footer .widgets .widget a {
  color: #B3B3B3;
}
#footer .widgets .widget ul li {
  margin-bottom: 15px;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget ul li {
    margin-bottom: 25px;
  }
}
#footer .widgets .widget .social__item {
  display: inline-block;
  font-size: 30px;
  margin-right: 10px;
}
#footer .widgets .widget .social__item a {
  position: relative;
  display: block;
  width: 26px;
  height: 34px;
  overflow: hidden;
  color: #D67F1A;
}
#footer .widgets .widget .social__item a:active {
  top: 1px;
}
@media only screen and (max-width: 695px) {
  #footer .widgets .widget {
    width: 50%;
  }
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget {
    width: 100%;
    text-align: center;
  }
}

#content {
  position: relative;
  padding-bottom: 60px;
}

.layout__left {
  float: left;
}
.layout__right {
  float: right;
}

.page {
  position: relative;
  min-height: 100%;
  padding-top: 25px;
}
.page__title {
  font-family: "Open Sans";
  font-size: 42px;
  font-weight: 300;
  color: #F7931E;
  margin-bottom: 30px;
}
.page.page-main {
  padding-top: 50px;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 30;
  background-color: rgba(0, 0, 0, 0.5);
}

.sidebar-filters {
  position: absolute;
  top: 0;
  left: 0;
  width: 390px;
  height: 100%;
  padding: 10px 0 30px;
  background: #262626;
  z-index: 100;
  overflow: scroll;
}
@media only screen and (max-width: 320px) {
  .sidebar-filters {
    width: 300px;
  }
}

.ew-filter-link {
  position: fixed;
  top: 258px;
  left: 0;
  z-index: 100;
}
.ew-filter-link--is-open {
  left: 390px;
}
.ew-filter-link a {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  display: inline-block;
  padding: 13px 10px;
  background: #A15F14;
  text-align: center;
  font-size: 0;
  vertical-align: middle;
}
.ew-filter-link a:before {
  font-size: 26px;
  color: #fff;
}

.b-popular-events-slider__slide {
  position: relative;
  width: 100%;
  height: auto;
  max-height: 400px;
  overflow: hidden;
}
.b-popular-events-slider__dots {
  display: block;
  margin: 20px 0;
  text-align: center;
}
.b-popular-events-slider__dots span {
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  display: inline-block;
  width: 9px;
  height: 5px;
  padding: 5px;
  margin: 0 3px;
  background: #666666;
  border: 3px solid #595959;
  cursor: pointer;
}
.b-popular-events-slider__dots span.swiper-active-switch {
  background: #C27417;
}

.b-slide {
  position: relative;
}
.b-slide__picture {
  position: relative;
}
.b-slide__picture img {
  width: 100%;
  max-width: 100%;
}
.b-slide__info {
  position: absolute;
  bottom: 20%;
  padding: 20px 25px;
  background-color: rgba(0, 0, 0, 0.7);
}
/* ... */

